--- a/Sources/SampleUA510/SampleUA510.csproj
+++ b/Sources/SampleUA510/SampleUA510.csproj
@@ -11,8 +11,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="4.6.0.726" />
-    <PackageReference Include="Xamarin.Essentials" Version="1.5.3.1" />
-    <PackageReference Include="ZPF_Basics" Version="1.1.11.10" />
+    <PackageReference Include="System.Text.Json" Version="5.0.0" />
+    <PackageReference Include="Xamarin.Forms" Version="4.8.0.1687" />
+    <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
+    <PackageReference Include="ZPF_Basics" Version="2.0.0.10" />
   </ItemGroup>
 </Project>
